WIP: QRGen Writup

--- a/content/blog/2019_03_06_qrgen.md
+++ b/content/blog/2019_03_06_qrgen.md
@@ -5,21 +5,30 @@ author: Graham L. Brown
 draft: true
 ---
 
+### TODO: 
+
+- QRGen: Detail the code structure and any technical choices with tradeoffs
+- Working with Cgo: CGO discoveries such as Go/C interopability, &d[0], unsafe.Pointer, what to free.
+- Usage: Usage information via cmd line, Go library usage, and webapp
+- Add a hosted qr code generator
+
+---
+
 I built a small Go wrapper around a QR code generator library as a way to demonstrate fast, private, and independent QR code generation, and as a way to play with cgo bindings to a relatively simple C library.
 
 ___
 
-### The inciting incident
+### The Inciting Incident
 
 I was contacted by a non-technical friend about the possibility of generating QR codes privately. Many of the services out there are closed source, or actively note they are doing something with your data. This could be sending your data to advertisers, checking sites for malicious intent, or just logging your work. Should you want to generate QR codes for internal use, these services create a gaping security hole.
 
-QR codes have always interested me as they are a simple bridge between the digital and physical worlds. The rise of mobile payments in Asia via WeChat and QR codes is a fascinating case study on how making that bridge convientient and easy to cross facilities innovation.
+QR codes have always interested me as they are a simple bridge between the digital and physical worlds. The rise of mobile payments in Asia via WeChat and QR codes is a fascinating case study on making it convientient and easy to cross the physical/digital divide facilities innovation.
 
 ---
 
-### How to generate the codes?
+### How to Generate the Codes?
 
-Given the challenge, there were three possibilites before me:
+Given the challenge, there were three possibilites:
 
 1. Find a pre-existing open source service which allows easy QR code generation and easy auditing of its code base.
 2. Find a pre-existing open source library, which allows easy auditing, and build a wrapper application around it.
@@ -27,19 +36,32 @@ Given the challenge, there were three possibilites before me:
 
 These options increase in time investment and difficulty. 
 
-After a brief and non-exhaustive search for a pre-existing open source service, I quickly found many open source libraries. 
+After a brief and non-exhaustive search for a pre-existing open source service, I quickly found many open source libraries. Coming across [Nayuki's](https://github.com/nayuki) excellent [C implementation](https://github.com/nayuki/QR-Code-generator/tree/master/c) of the ISO/IEC 18004:2006 QR Code standard, I was convinced of its quality due to its clarity, simplicity, and well documented nature.
 
+Therefore, due to my passion for writing Go code and wanting to play with the C library Go bindings, my path was clear.
 
-**Insert Lead paragraph here.****
+I would create a command line application and Go library, Using my restructured [gonew project base](https://github.com/grellyd/gonew), Nayuki's c library, and cgo. 
 
+___
 
+### Building QRGen
 
-### TODOs for commercial release:
+---
 
-- Unit testing.
-- Audit the C library for correctness to ISO/IEC 18004:2006 or rewrite in Go.
+### Working with cgo
+___
+
+### Usage
+
+___
+
+### Commercial Release Required Tasks:
+
+Should an individual wish to use this library in a commercial setting, some additional work is required:
+
+- Unit testing to assert correctness.
+- Audit the C library for correctness to ISO/IEC 18004:2015 or rewrite in Go.
 - Find out the desired bindings (web, app, etc.) and build their interfaces.
-
 
 ---
 
@@ -60,10 +82,6 @@ GNU Multiple Precision Bignum example cgo bindings [https://golang.org/misc/cgo/
 unsafe/Pointer [https://golang.org/pkg/unsafe/#Pointer](https://golang.org/pkg/unsafe/#Pointer)
 
 Halftoning With Go - Part 1 [https://maxhalford.github.io/blog/halftoning-with-go---part-1/](https://maxhalford.github.io/blog/halftoning-with-go---part-1/)
-
-### TODO: 
-
-** TODOs before the release of this blog post.**
 
 ---
 
