Add week two reading log

--- a/content/writing/2023-01-30-log.md
+++ b/content/writing/2023-01-30-log.md
@@ -33,4 +33,26 @@ https://www.bitsaboutmoney.com/archive/kyc-and-aml-beyond-the-acronyms/
 
 ## Week Two
 
-### TBD
+### Ben Thompson - The Four Horsemen of the Tech Recession (Stratechery Article 2-6-2023)
+
+> Remember, though, that tech didn’t just survive COVID: it thrived. Consumers with no way to spend discretionary income and flush with stimulus checks bought new devices; people stuck at home subscribed to streaming services and ordered e-commerce; businesses thrust into remote work subscribed to SaaS services that promised to make the experience bearable; and all of this ran on the cloud.
+
+Good use of punctuation including semicolons.
+
+### The Narwhal - Dereliction of doodie: Ontario’s plans for York Region’s sewage could hurt Great Lakes — and U.S. relations
+
+> “There comes a time in every climate reporter’s life when you’ve gone through the studies, the development plans, the regulations … eventually you’ll hit a pile of crap.” 
+
+Great hook line!
+
+### Ramit Sethi The Rich Life - What you can learn from these bad “Shark Tank” pitches
+
+> Who doesn’t like the smell of bacon in the morning? 
+
+> What? I have to spend eight hours sleeping next to a piece of raw bacon, and then have an oven start up right by my head while I’m sleeping? 
+
+> What could go wrong? 
+
+> But the next pitch makes the BBQ candle and Wake ‘N Bacon seem like billion-dollar ideas.
+
+Almost naught but questions!
