First go at our homework

--- a/content/writing/2023-01-30-class.md
+++ b/content/writing/2023-01-30-class.md
@@ -85,3 +85,16 @@ As the writer, what kinds of choices would you make to meet their needs and expe
 
 
 Once upon a time, I needed help and advice. Lacking any sense of wisdom, I turned to Charles Bukowski, an utter rogue. While he was the worst devil of almost every vice, his insights were true and clear and the perfect place to start.
+
+### Homework
+
+Using your anchor words from earlier in Tuesday’s class as ‘data’, write a text about your relationship as writer to AUDIENCE. Feel free to expand on the anchor words.
+• Consider your fears, desires, hopes, expectations, etc.
+• 350 words — no fewer than; more if you need them
+• Bring this text to Class No. 3 on February 7th, as we will work with it.
+
+I write for myself. For myself now, myself tomorrow, and myself years ago. Those three require different time and attention in order to be effectively communicated with.
+
+For myself today, I write as I wish to read now; I take a firm clear approach to the issue at hand and define it from first principles with a keen eye to detail and completeness. For the future self I write with context; I ensure to describe my reason for writing and how the conclusion was reached, eyeing how well it was received with any applicable outcomes. For the past self, I teach so those without my current knowledge may follow; I strive for clarity while documenting the steps that build to my conclusions.
+
+Concerns regarding my audience extend to those that don’t fit within those three roles, aka anyone else. I know that if I slave away over a piece of writing, my past, present, and future self will appreciate it. I fear that no one else will. I believe this fear is mostly unfounded, as my work has already found decent value, praise, and acclaim. However one cannot prove a negative. I suppose the question then becomes: what is enough validation after which my fear is proven unfounded? Not yet, but I do not think such a point is beyond reach. 
