--- a/content/writing/2023-01-30-class.md
+++ b/content/writing/2023-01-30-class.md
@@ -16,12 +16,14 @@ I write software for a living, and so unlike Debbie, I am quite logical and sque
 Generally, I've always enjoyed writing, but I've never been that great at writing fiction. Where I have started to find my groove is in more technical writing and essay writing.
 
 Looking to learn to write more effectively and empathetically so that I can better communicate to my peers on topics which I am experienced and educated.
- - Informing our customer base on the complicated technical background of the product my team owns
- - Introducing our team to a new Development process
+
+ - Informing our customer base on the complicated technical background of the product my team owns 
+  - Introducing our team to a new Development process
  - A 'how-to' guide on Writing Effective Self-Review content
  - Deep technical dives and explainers on technical topics
 
  Topics I'd like to learn:
+ 
   - Formalise my writing process
   - Defining what 'effective' writing means
   - Balancing between being verbose and concise
@@ -78,10 +80,10 @@ Graham is a writer who creates in order to clarify, to inform, to influence, and
 
 ### Profiling
 
-Fear re audience: That no one cares. To put something out into the ether that I slaved over and think is excellent, but no one cares
-Who is your Reader: Younger version of myself that needs a bit of help and support. I write that which I wish I could have read once upon a time.
-Can you characterise your ideal reader? Ditto ^^. Younger me looking to solve problems older me has once encountered.
-As the writer, what kinds of choices would you make to meet their needs and expectations? Assuming little to no prior knowledge. Explaining from nearly first principles, to provide a foundation upon which to build. The building can rise quickly, but the path upwards must be clear.
+ - Fear re audience: That no one cares. To put something out into the ether that I slaved over and think is excellent, but no one cares
+ - Who is your Reader: Younger version of myself that needs a bit of help and support. I write that which I wish I could have read once upon a time.
+ - Can you characterise your ideal reader? Ditto ^^. Younger me looking to solve problems older me has once encountered.
+ - As the writer, what kinds of choices would you make to meet their needs and expectations? Assuming little to no prior knowledge. Explaining from nearly first principles, to provide a foundation upon which to build. The building can rise quickly, but the path upwards must be clear.
 
 
 Once upon a time, I needed help and advice. Lacking any sense of wisdom, I turned to Charles Bukowski, an utter rogue. While he was the worst devil of almost every vice, his insights were true and clear and the perfect place to start.
@@ -89,6 +91,7 @@ Once upon a time, I needed help and advice. Lacking any sense of wisdom, I turne
 ### Homework
 
 Using your anchor words from earlier in Tuesday’s class as ‘data’, write a text about your relationship as writer to AUDIENCE. Feel free to expand on the anchor words.
+
  - Consider your fears, desires, hopes, expectations, etc.
  - 350 words — no fewer than; more if you need them
  - Bring this text to Class No. 3 on February 7th, as we will work with it.
