--- a/content/writing/2023-01-30-class.md
+++ b/content/writing/2023-01-30-class.md
@@ -96,10 +96,55 @@ Using your anchor words from earlier in Tuesday’s class as ‘data’, write a
  - 350 words — no fewer than; more if you need them
  - Bring this text to Class No. 3 on February 7th, as we will work with it.
 
-I write for myself. For myself now, myself tomorrow, and myself years ago. Those three require different time and attention in order to be effectively communicated with.
+> I write for myself. For myself now, myself tomorrow, and myself years ago. Those three require different time and attention in order to be effectively communicated with.
 
-For myself today, I write as I wish to read now; I take a firm clear approach to the issue at hand and define it from first principles with a keen eye to detail and completeness. For the future self I write with context; I ensure to describe my reason for writing and how the conclusion was reached, eyeing how well it was received with any applicable outcomes. For the past self, I teach so those without my current knowledge may follow; I strive for clarity while documenting the steps that build to my conclusions.
+> For myself today, I write as I wish to read now; I take a firm clear approach to the issue at hand and define it from first principles with a keen eye to detail and completeness. For the future self I write with context; I ensure to describe my reason for writing and how the conclusion was reached, eyeing how well it was received with any applicable outcomes. For the past self, I teach so those without my current knowledge may follow; I strive for clarity while documenting the steps that build to my conclusions.
 
-Concerns regarding my audience extend to those that don’t fit within those three roles, aka anyone else. I know that if I slave away over a piece of writing, my past, present, and future self will appreciate it. I fear that no one else will. I believe this fear is mostly unfounded, as my work has already found decent value, praise, and acclaim. However one cannot prove a negative. I suppose the question then becomes: what is enough validation after which my fear is proven unfounded? Not yet, but I do not think such a point is beyond reach. 
+> Concerns regarding my audience extend to those that don’t fit within those three roles, aka anyone else. I know that if I slave away over a piece of writing, my past, present, and future self will appreciate it. I fear that no one else will. I believe this fear is mostly unfounded, as my work has already found decent value, praise, and acclaim. However one cannot prove a negative. I suppose the question then becomes: what is enough validation after which my fear is proven unfounded? Not yet, but I do not think such a point is beyond reach. 
 
-I hope that others will derive as much if not more value than I got from learning and writing about the topic. I believe this I can deliver.
+> I hope that others will derive as much if not more value than I got from learning and writing about the topic. I believe this I can deliver.
+
+## Class 3 - Editing
+
+What are two words that come to mind when we say: Edit your Work?
+
+__Before:__
+- Me: reading aloud
+- All: Tedious, revisit, cut out, improve, decision, repeat, whittle, re-read enjoy, clean up the hot mess, streamline, almost no more UFOs (unfinished objects), ephiphanies, reading aloud, work.
+
+__After:__
+- Me: iterate and restructure
+- All: Clarify, question, exploration, consistency, find those UFOs, creativity, carve, immersion, choices, iterate and restructure, hope, add subtract, space, rethink
+
+Flash-length creative non-fiction or fiction - under 100 words
+Micro CNF/F - under 250 words
+
+Write without fear, edit without mercy. Kill all your darlings. To write is human, to edit is divine.
+
+### In-class exercise:
+
+__Opening paragraphs__
+> “Twenty-one years ago, when my wife, Margaret, and I first moved up to the country from New York City and bought an eighteenthcentury farmhouse in Pleasant Valley, New York, not far from Poughkeepsie, we didn’t give much thought to our new neighbours, who were mostly hardworking dairy farmers of seventeenth-century Dutch or English stock and, while not exactly unfriendly, were reluctant to enter into conversation with people who didn’t raise Holsteins and weren’t interested in the price of milk.”
+
+
+
+Country Matters by Michael Korda. (2001). New York City: Harper Collins.
+
+
+> “Back in 1961, when women wore shirtwaist dresses and joined garden clubs and drove legions of children around in seatbeltless cars without giving it a second thought; back before anyone knew there’d even be a sixties movement, much less one that its participants would spend the next sixty years chronicling; back when the big wars were over and the secret wars had just begun and people were starting to think fresh and believe everything was possible, the thirty-year-old mother of Madeleine Zott rose before dawn every morning and felt certain of just one thing: her life was over.  
+
+> Despite that certainty, she made her way to the lab to pack her daughter’s lunch.”
+
+
+
+Lessons in Chemistry by Bonnie Garmus. (2022). Penguin Random House. 
+
+__Three-word sentence__
+
+> The boy jumped
+
+The young tired boy jumped, again and again. Up and down, up and down, with the only audible accompaniment the rasp of his breath and the thwack of the rope. 
+
+### Homework
+
+__Revise Audience piece__
