--- a/content/writing/2023-01-30-class.md
+++ b/content/writing/2023-01-30-class.md
@@ -68,7 +68,7 @@ Defining an artisitc self-portait is an uncomfortable exercise, as I do not see 
 
 ### Re-writing for another audience: 
 
-Who is the audience of ^^? My super-ego.
+Who is the audience of the portrait? My super-ego.
 
 Take the portrait, translate it as an author bio as a national literary magazine. 250 max
 
