--- a/content/writing/2023-01-30-class.md
+++ b/content/writing/2023-01-30-class.md
@@ -2,7 +2,7 @@
 title: "Principles, Process, and Pleasure of Writing - Class Notes"
 date: 2023-01-02T08:38:01-08:00
 author: Graham L. Brown
-draft: true
+draft: false
 ---
 
 # Notes
