--- a/content/writing/2023-07-11-bonaire.md
+++ b/content/writing/2023-07-11-bonaire.md
@@ -1,3 +1,10 @@
+---
+title: "Bonaire"
+date: 2023-07-11
+author: Graham L. Brown
+draft: true
+---
+
 Hey folks,
 
 Graham and Viv here. This email is about your interest in joining us for a dive trip to Bonaire next May. We’ve spoken to you briefly before about the trip, but here it is in full detail.
